<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmf.wedding.D_ConfirmFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/white">

        <ImageView
            android:id="@+id/IV_dc_stats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"/>

        <ImageView
            android:id="@+id/IV_dc_dress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:scaleType="matrix"
            android:adjustViewBounds="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:background="#00000000">

        <Button
            android:id="@+id/BT_dc_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dc_buy"
            android:background="@drawable/button_style_1"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/BT_dc_rent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dc_rent"
            android:background="@drawable/button_style_1"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/BT_dc_both"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dc_both"
            android:background="@drawable/button_style_1"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
